# downloader-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  release-unity.yml  release.yml
crates/download_examples/: Cargo.toml
crates/download_examples/src/: main.rs
crates/download_patch/: Cargo.toml
crates/download_patch/src/: lib.rs  patch.rs
crates/download_unity/: Cargo.toml
crates/download_unity/src/: extern_download.rs  lib.rs
download-examples/: Cargo.toml
download-examples/src/: download_large_file.rs  main.rs
downloader-unity/: Cargo.toml
downloader-unity/src/: c.rs  lib.rs
examples/: basic_download.rs  memory_download.rs  multi_download.rs
res/: Pack1.prefab  Pack2.prefab
src/: c.rs  chunk.rs  chunk_hub.rs  chunk_metadata.rs  chunk_operation.rs  chunk_range.rs  download_configuration.rs  download_handle.rs  download_handle_file.rs  download_handle_memory.rs  download_operation.rs  download_receiver.rs  download_sender.rs  download_service.rs  download_status.rs  download_task.rs  download_tracker.rs  downloader.rs  error.rs  file_verify.rs  lib.rs  rate_limiter.rs  remote_file.rs  request.rs  stream.rs
src/patch/: diff.rs  file_patch.rs  mod.rs
src/verify/: file_verify.rs  mod.rs
