[package]
name = "downloader-rs"
version = "0.5.7"
edition = "2021"
license = "MIT"
description = "a simple file downloader for rust"
homepage = "https://github.com/ilinchunjie/downloader-rs"
documentation = "https://github.com/ilinchunjie/downloader-rs"
repository = "https://github.com/ilinchunjie/downloader-rs"
readme = "README.md"
exclude = ["/.github", "/.idea", "/res"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.32.0", features = ["bytes", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.10" }
reqwest = { version = "0.11.20", features = ["stream", "rustls-tls"], default-features = false }
futures = { version = "0.3.29", features = ["async-await"] }
chrono = { version = "0.4.31" }
parking_lot = { version = "0.12.1" }
xxhash-rust = { version = "0.8.7", features = ["xxh64"] }

[profile.dev]
debug = true

[profile.release]
lto = true
opt-level = 'z'