[package]
name = "downloader-rs"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "a simple file downloader for rust"
homepage = "https://github.com/ilinchunjie/downloader-rs"
documentation = "https://github.com/ilinchunjie/downloader-rs"
repository = "https://github.com/ilinchunjie/downloader-rs"
readme = "README.md"
exclude = ["/.github", "/.idea", "/res"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["bytes", "rt-multi-thread", "macros", "io-util", "fs"] }
tokio-util = { version = "0.7" }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
futures = { version = "0.3", features = ["async-await"] }
chrono = { version = "0.4" }
parking_lot = { version = "0.12" }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
thiserror = { version = "2" }
tracing = { version = "0.1" }

[profile.dev]
debug = true

[profile.release]
lto = true
opt-level = 'z'