[package]
name = "download-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.23.0", features = ["all-widgets"] }
anyhow = { version = "1.0.75" }
crossterm = { version = "0.27.0" }
downloader-rs = { path = "../../downloader-rs" }