[package]
name = "downloader-unity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downloader-rs = { path = "../../downloader-rs", features = ["xxhash-rust"] }

[lib]
name = "downloader"
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true