[package]
name = "download_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downloader-rs = { path = "../../../downloader-rs" }
dhat = { version = "0.3.2" }

[profile.dev]
debug = true

[profile.release]
debug = true